[package]
name = "goose-mlx-lm-utils"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Goose-maintained utilities for MLX language model runtimes"
readme = "README.md"

[dependencies]
minijinja = { version = "2", features = ["loader"] }
minijinja-contrib = { version = "2", features = ["pycompat"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokenizers = "0.22"
