[package]
name = "goose-mlx-lm"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Goose-maintained Rust MLX language model runtime"
readme = "README.md"

[dependencies]
# Local dependencies
mlx-rs.workspace = true
mlx-macros.workspace = true
goose-mlx-lm-utils.workspace = true

# External dependencies
serde = { version = "1", features = ["derive"] }
anyhow = "1"
tokenizers = { version = "0.22.0", features = ["http"] } 
clap = { version = "4", features = ["derive"] }
idna_adapter = "1.2" 
thiserror = "2"
serde_json = "1"
minijinja = "2"

[dev-dependencies]
lazy_static = "1"
